--- a/index.html
+++ b/index.html
@@ -10,9 +10,21 @@
     />
     <meta name="author" content="Frugloo" />
 
+    <!-- Canonical & Robots -->
+    <link rel="canonical" href="https://frugloo.com/" />
+    <meta
+      name="robots"
+      content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1"
+    />
+    <meta name="application-name" content="Frugloo" />
+    <meta name="apple-mobile-web-app-title" content="Frugloo" />
+    <meta name="theme-color" content="#2C9A6E" />
+    <meta name="msapplication-TileColor" content="#2C9A6E" />
+
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="alternate icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,23 +34,62 @@
       rel="stylesheet"
     />
 
+    <!-- Open Graph -->
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Frugloo" />
+    <meta property="og:url" content="https://frugloo.com/" />
     <meta property="og:title" content="Frugloo - Track Your Money Instantly" />
     <meta
       property="og:description"
       content="Take control of your finances with Frugloo. Get debt clarity, AI guidance, and a fun mentor buddy to keep you on track."
     />
-    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://frugloo.com/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta
-      property="og:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
+      property="og:image:alt"
+      content="Frugloo — Track Your Money Instantly"
     />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@frugloo" />
+    <meta name="twitter:creator" content="@frugloo" />
+    <meta name="twitter:title" content="Frugloo - Track Your Money Instantly" />
     <meta
-      name="twitter:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
+      name="twitter:description"
+      content="Take control of your finances with Frugloo. Get debt clarity, AI guidance, and a fun mentor buddy to keep you on track."
     />
+    <meta name="twitter:image" content="https://frugloo.com/og-image.png" />
+    <meta
+      name="twitter:image:alt"
+      content="Frugloo — Track Your Money Instantly"
+    />
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Frugloo",
+        "url": "https://frugloo.com/",
+        "logo": "https://frugloo.com/logo-wordmark.svg",
+        "sameAs": ["https://twitter.com/frugloo"]
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Frugloo",
+        "url": "https://frugloo.com/",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://frugloo.com/search?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
   </head>
 
   <body>
