Enhance SEO and accessibility by updating meta tags, adding structured data, and optimizing robots.txt and sitemap.xml for Frugloo AI-powered personal finance app

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frugloo - Track Your Money Instantly</title>
+    <title>
+      Frugloo - AI-Powered Personal Finance Tracker | Smart Money Management
+    </title>
     <meta
       name="description"
-      content="Take control of your finances with Frugloo. Get debt clarity, AI guidance, and a fun mentor buddy to keep you on track. Join our waitlist today!"
+      content="Revolutionary AI-powered personal finance app that provides intelligent debt tracking, smart budgeting, and personalized financial guidance. Join thousands using AI to transform their money management."
+    />
+    <meta
+      name="keywords"
+      content="AI personal finance, artificial intelligence budgeting, smart money tracker, AI financial advisor, automated expense tracking, intelligent debt management, AI-powered budgeting app, personal finance AI, smart financial planning, AI money mentor"
     />
     <meta name="author" content="Frugloo" />
 
@@ -20,6 +26,32 @@
     <meta name="apple-mobile-web-app-title" content="Frugloo" />
     <meta name="theme-color" content="#2C9A6E" />
     <meta name="msapplication-TileColor" content="#2C9A6E" />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="referrer" content="origin-when-cross-origin" />
+    <meta name="rating" content="general" />
+    <meta name="distribution" content="global" />
+    <meta name="language" content="en-US" />
+    <meta name="geo.region" content="US" />
+    <meta name="geo.placename" content="United States" />
+
+    <!-- AI and Technology Focused Meta Tags -->
+    <meta name="subject" content="AI-Powered Personal Finance Management" />
+    <meta
+      name="classification"
+      content="Financial Technology, Artificial Intelligence, Personal Finance"
+    />
+    <meta name="category" content="FinTech, AI, Personal Finance, Budgeting" />
+    <meta name="coverage" content="Worldwide" />
+    <meta name="target" content="all" />
+    <meta
+      name="audience"
+      content="adults, young professionals, financial planning enthusiasts"
+    />
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -39,60 +71,147 @@
       rel="stylesheet"
     />
 
+    <!-- DNS Prefetch for Performance -->
+    <link rel="dns-prefetch" href="//fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="//fonts.gstatic.com" />
+    <link rel="dns-prefetch" href="//twitter.com" />
+    <link rel="dns-prefetch" href="//facebook.com" />
+
+    <!-- Preload Critical Resources -->
+    <link
+      rel="preload"
+      href="/logo-eclipse.svg"
+      as="image"
+      type="image/svg+xml"
+    />
+    <link rel="preload" href="/og-image.png" as="image" type="image/png" />
+
+    <!-- Performance Hints -->
+    <meta http-equiv="x-dns-prefetch-control" content="on" />
+    <meta name="format-detection" content="telephone=no" />
+
+    <!-- Security Headers -->
+    <meta http-equiv="X-Content-Type-Options" content="nosniff" />
+    <meta http-equiv="X-Frame-Options" content="DENY" />
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
+
     <!-- Open Graph -->
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Frugloo" />
     <meta property="og:url" content="https://frugloo.com/" />
-    <meta property="og:title" content="Frugloo - Track Your Money Instantly" />
+    <meta
+      property="og:title"
+      content="Frugloo - AI-Powered Personal Finance Tracker | Smart Money Management"
+    />
     <meta
       property="og:description"
-      content="Take control of your finances with Frugloo. Get debt clarity, AI guidance, and a fun mentor buddy to keep you on track."
+      content="Revolutionary AI-powered personal finance app with intelligent debt tracking, smart budgeting, and personalized financial guidance. Transform your money management with artificial intelligence."
     />
     <meta property="og:image" content="https://frugloo.com/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta
       property="og:image:alt"
-      content="Frugloo — Track Your Money Instantly"
+      content="Frugloo AI-Powered Personal Finance App - Smart Money Management Dashboard"
     />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@frugloo" />
     <meta name="twitter:creator" content="@frugloo" />
-    <meta name="twitter:title" content="Frugloo - Track Your Money Instantly" />
+    <meta
+      name="twitter:title"
+      content="Frugloo - AI-Powered Personal Finance Tracker | Smart Money Management"
+    />
     <meta
       name="twitter:description"
-      content="Take control of your finances with Frugloo. Get debt clarity, AI guidance, and a fun mentor buddy to keep you on track."
+      content="Revolutionary AI-powered personal finance app with intelligent debt tracking, smart budgeting, and personalized financial guidance. Transform your money management with artificial intelligence."
     />
     <meta name="twitter:image" content="https://frugloo.com/og-image.png" />
     <meta
       name="twitter:image:alt"
-      content="Frugloo — Track Your Money Instantly"
+      content="Frugloo AI-Powered Personal Finance App - Smart Money Management Dashboard"
     />
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Organization",
+        "@type": "SoftwareApplication",
         "name": "Frugloo",
+        "applicationCategory": "FinanceApplication",
+        "operatingSystem": "Web, iOS, Android",
+        "description": "AI-powered personal finance tracker with intelligent debt management, smart budgeting, and personalized financial guidance",
         "url": "https://frugloo.com/",
         "logo": "https://frugloo.com/logo-wordmark.svg",
-        "sameAs": ["https://twitter.com/frugloo"]
+        "publisher": {
+          "@type": "Organization",
+          "name": "Frugloo",
+          "url": "https://frugloo.com/",
+          "logo": "https://frugloo.com/logo-wordmark.svg",
+          "sameAs": ["https://twitter.com/frugloo"]
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD",
+          "description": "Free AI-powered personal finance app with waitlist access"
+        },
+        "featureList": [
+          "AI-driven financial decisions",
+          "Intelligent debt tracking",
+          "Smart expense categorization",
+          "Personalized budget planning",
+          "AI financial mentor",
+          "Automated bill reminders"
+        ],
+        "keywords": "AI personal finance, artificial intelligence budgeting, smart money tracker, AI financial advisor, automated expense tracking, intelligent debt management"
       }
     </script>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "Frugloo",
+        "name": "Frugloo - AI-Powered Personal Finance Tracker",
         "url": "https://frugloo.com/",
+        "description": "Revolutionary AI-powered personal finance app that provides intelligent debt tracking, smart budgeting, and personalized financial guidance",
         "potentialAction": {
           "@type": "SearchAction",
           "target": "https://frugloo.com/search?q={search_term_string}",
           "query-input": "required name=search_term_string"
         }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "What makes Frugloo different from other personal finance apps?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Frugloo uses advanced AI technology to provide personalized financial guidance, intelligent debt tracking, and smart budgeting recommendations tailored to your lifestyle and spending patterns."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How does the AI financial advisor work?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Our AI learns from your spending habits and financial goals to provide realistic, personalized advice that you can actually stick to, without feeling deprived or overwhelmed."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Is Frugloo free to use?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes, Frugloo offers a free AI-powered personal finance tracking experience. Join our waitlist to get early access to all features."
+            }
+          }
+        ]
       }
     </script>
   </head>
