Update index.html with pre-launch mobile app meta tags, enhance SEO keywords, and add structured data for waitlist availability in preparation for Frugloo AI finance app launch

--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
     />
     <meta
       name="keywords"
-      content="AI personal finance, artificial intelligence budgeting, smart money tracker, AI financial advisor, automated expense tracking, intelligent debt management, AI-powered budgeting app, personal finance AI, smart financial planning, AI money mentor"
+      content="AI personal finance, artificial intelligence budgeting, smart money tracker, AI financial advisor, automated expense tracking, intelligent debt management, AI-powered budgeting app, personal finance AI, smart financial planning, AI money mentor, coming soon, waitlist, pre-launch, fintech startup"
     />
+
+    <!-- Pre-Launch Mobile App Meta Tags -->
+    <meta name="app:availability" content="coming_soon" />
+    <meta name="app:platform" content="mobile,web" />
+    <meta name="app:price" content="free" />
+    <meta name="app:category" content="finance" />
+    <meta name="app:release_date" content="2026" />
+    <meta name="app:status" content="waitlist" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="author" content="Frugloo" />
 
     <!-- Canonical & Robots -->
@@ -155,7 +165,12 @@
           "@type": "Offer",
           "price": "0",
           "priceCurrency": "USD",
-          "description": "Free AI-powered personal finance app with waitlist access"
+          "description": "Free AI-powered personal finance app with waitlist access",
+          "availability": "https://schema.org/PreOrder",
+          "validFrom": "2025-09-26",
+          "validThrough": "2026-12-31",
+          "category": "Mobile App Waitlist",
+          "itemCondition": "https://schema.org/NewCondition"
         },
         "featureList": [
           "AI-driven financial decisions",
