Revamp SEO and content across multiple components for Frugloo AI finance app; update meta tags, enhance feature descriptions, and improve user engagement messaging in preparation for launch

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Frugloo - AI-Powered Personal Finance Tracker | Smart Money Management
+      Frugloo - Master Your Money with AI That Gets You | Get Early Access
     </title>
     <meta
       name="description"
-      content="Revolutionary AI-powered personal finance app that provides intelligent debt tracking, smart budgeting, and personalized financial guidance. Join thousands using AI to transform their money management."
+      content="Finally, a finance app that understands your real life. Get out of debt faster, save more effortlessly, and build wealth with AI that learns your habits. Join thousands getting early access."
     />
     <meta
       name="keywords"
-      content="AI personal finance, artificial intelligence budgeting, smart money tracker, AI financial advisor, automated expense tracking, intelligent debt management, AI-powered budgeting app, personal finance AI, smart financial planning, AI money mentor, coming soon, waitlist, pre-launch, fintech startup"
+      content="get out of debt faster, build wealth with AI, smart money management, debt free journey, AI financial coach, automated expense tracking, intelligent budgeting, personal finance AI, early access finance app, money management app, financial freedom, AI money mentor, waitlist, pre-launch, fintech startup"
     />
 
     <!-- Pre-Launch Mobile App Meta Tags -->
@@ -112,11 +112,11 @@
     <meta property="og:url" content="https://frugloo.com/" />
     <meta
       property="og:title"
-      content="Frugloo - AI-Powered Personal Finance Tracker | Smart Money Management"
+      content="Frugloo - Master Your Money with AI That Gets You | Get Early Access"
     />
     <meta
       property="og:description"
-      content="Revolutionary AI-powered personal finance app with intelligent debt tracking, smart budgeting, and personalized financial guidance. Transform your money management with artificial intelligence."
+      content="Finally, a finance app that understands your real life. Get out of debt faster, save more effortlessly, and build wealth with AI that learns your habits. Join thousands getting early access."
     />
     <meta property="og:image" content="https://frugloo.com/og-image.png" />
     <meta property="og:image:width" content="1200" />
@@ -131,11 +131,11 @@
     <meta name="twitter:creator" content="@frugloo" />
     <meta
       name="twitter:title"
-      content="Frugloo - AI-Powered Personal Finance Tracker | Smart Money Management"
+      content="Frugloo - Master Your Money with AI That Gets You | Get Early Access"
     />
     <meta
       name="twitter:description"
-      content="Revolutionary AI-powered personal finance app with intelligent debt tracking, smart budgeting, and personalized financial guidance. Transform your money management with artificial intelligence."
+      content="Finally, a finance app that understands your real life. Get out of debt faster, save more effortlessly, and build wealth with AI that learns your habits. Join thousands getting early access."
     />
     <meta name="twitter:image" content="https://frugloo.com/og-image.png" />
     <meta
@@ -151,7 +151,7 @@
         "name": "Frugloo",
         "applicationCategory": "FinanceApplication",
         "operatingSystem": "Web, iOS, Android",
-        "description": "AI-powered personal finance tracker with intelligent debt management, smart budgeting, and personalized financial guidance",
+        "description": "Master your money with AI that gets you. Get out of debt faster, save more effortlessly, and build wealth with AI that learns your habits.",
         "url": "https://frugloo.com/",
         "logo": "https://frugloo.com/logo-wordmark.svg",
         "publisher": {
@@ -173,14 +173,14 @@
           "itemCondition": "https://schema.org/NewCondition"
         },
         "featureList": [
-          "AI-driven financial decisions",
-          "Intelligent debt tracking",
-          "Smart expense categorization",
-          "Personalized budget planning",
-          "AI financial mentor",
-          "Automated bill reminders"
+          "Smart money moves with AI",
+          "Debt clarity and payoff strategies",
+          "Your personal money coach",
+          "Auto expense tracking",
+          "Smart budgets that work",
+          "Never miss a bill"
         ],
-        "keywords": "AI personal finance, artificial intelligence budgeting, smart money tracker, AI financial advisor, automated expense tracking, intelligent debt management"
+        "keywords": "get out of debt faster, build wealth with AI, smart money management, debt free journey, AI financial coach, automated expense tracking, intelligent budgeting, personal finance AI, early access finance app, money management app, financial freedom, AI money mentor"
       }
     </script>
     <script type="application/ld+json">
@@ -207,23 +207,23 @@
             "name": "What makes Frugloo different from other personal finance apps?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Frugloo uses advanced AI technology to provide personalized financial guidance, intelligent debt tracking, and smart budgeting recommendations tailored to your lifestyle and spending patterns."
+              "text": "Frugloo is the first finance app that actually understands your real life. Our AI learns your habits and provides realistic advice you can stick to, helping you get out of debt faster and build wealth without feeling deprived."
             }
           },
           {
             "@type": "Question",
-            "name": "How does the AI financial advisor work?",
+            "name": "How does the AI financial coach work?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Our AI learns from your spending habits and financial goals to provide realistic, personalized advice that you can actually stick to, without feeling deprived or overwhelmed."
+              "text": "Your AI money coach learns your spending patterns and celebrates your wins while gently guiding you back on track. It provides realistic advice that works with your lifestyle, not against it, so you can actually stick to your financial goals."
             }
           },
           {
             "@type": "Question",
-            "name": "Is Frugloo free to use?",
+            "name": "How do I get early access to Frugloo?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Yes, Frugloo offers a free AI-powered personal finance tracking experience. Join our waitlist to get early access to all features."
+              "text": "Join our waitlist to get early access to Frugloo! You'll be among the first to experience AI-powered money management that actually works with your real life. Get exclusive features and special launch pricing."
             }
           }
         ]
