--- a/index.html
+++ b/index.html
@@ -230,28 +230,7 @@
       }
     </script>
 
-    <!-- Google Analytics -->
-    <script>
-      // Google Analytics will be loaded dynamically with environment variable
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      // Load GA script dynamically with environment variable
-      const gaId = import.meta.env.VITE_GA_MEASUREMENT_ID;
-      if (gaId && gaId !== 'GA_MEASUREMENT_ID') {
-        const script = document.createElement('script');
-        script.async = true;
-        script.src = `https://www.googletagmanager.com/gtag/js?id=${gaId}`;
-        document.head.appendChild(script);
-
-        script.onload = () => {
-          gtag('config', gaId);
-        };
-      }
-    </script>
+    <!-- Google Analytics will be loaded by React component -->
   </head>
 
   <body>
