Add favicon support with multiple sizes and browser configuration; include web app manifest for enhanced SEO and user experience.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <meta name="apple-mobile-web-app-title" content="Frugloo" />
     <meta name="theme-color" content="#2C9A6E" />
     <meta name="msapplication-TileColor" content="#2C9A6E" />
+    <meta name="msapplication-TileImage" content="/favicon-48x48.png" />
+    <meta name="msapplication-config" content="/browserconfig.xml" />
 
     <!-- Additional SEO Meta Tags -->
     <meta name="format-detection" content="telephone=no" />
@@ -63,15 +65,16 @@
       content="adults, young professionals, financial planning enthusiasts"
     />
 
-    <!-- Favicon -->
+    <!-- Favicon - Multiple sizes for better Google compatibility -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png" />
     <link rel="alternate icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 
-    <!-- Additional favicon sizes for better compatibility -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png" />
+    <!-- Web App Manifest for better search engine support -->
+    <link rel="manifest" href="/manifest.json" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
